name:                sanskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ashishnegi/sanskell#readme
license:             BSD3
license-file:        LICENSE
author:              Ashish Negi
maintainer:          ashishnegi33@gmail.com
copyright:           Copyright: (c) 2016-* Ashish Negi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sanskell.Types
                     , Sanskell.Crawler
                     , Sanskell.Words
                     , Sanskell.Api
                     , Sanskell.Server
  build-depends:       base >= 4.7 && < 5
                     , network-uri
                     , stm >= 2.4.4.1 && < 2.5
                     , text
                     , scalpel >= 0.3.1 && < 0.4
                     , async
                     , containers
                     , servant-server
                     , wai
                     , aeson
  default-language:    Haskell2010

executable sanskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sanskell
                     , warp
                     , containers
  default-language:    Haskell2010

test-suite sanskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sanskell
  ghc-options:         -Wall -threaded -rtsopts -rtsopts "-with-rtsopts=-N -K1k"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ashishnegi/sanskell
